# WXInlinePlayer

./: .babelrc  .gitignore  LICENSE  README.md  build.bat  build.sh  index.js  package-lock.json  package.json  server.js
example/: 10.flv  index.html  index.js  index.js.map  prod.all.asm.combine.js  prod.all.wasm.combine.js  prod.asm.combine.js  prod.baseline.asm.combine.js  prod.baseline.wasm.combine.js  prod.h265.asm.combine.js  prod.h265.wasm.combine.js  prod.wasm.combine.js
lib/codec/: .gitignore  CMakeLists.txt  build.sh
lib/codec/combine/: glue.js  index.html  prod.asm.combine.js  prod.wasm.combine.js
lib/codec/src/: CMakeLists.txt  config.h  main.cpp
lib/codec/src/codec/: CMakeLists.txt  codec.cpp  codec.h
lib/codec/src/demuxer/: CMakeLists.txt  audio_tag.cpp  audio_tag.h  body.cpp  body.h  data_tag.cpp  data_tag.h  decoder.cpp  decoder.h  header.cpp  header.h  tag.cpp  tag.h  vars.cpp  vars.h  video_tag.cpp  video_tag.h
lib/codec/src/factor/: CMakeLists.txt  codec_factor.cpp  codec_factor.h  factor_impl.h  h265_codec_factor.cpp  h265_codec_factor.h
lib/codec/src/h264/: CMakeLists.txt  basetype.h  h264bsd_byte_stream.h  h264bsd_deblocking.h  h264bsd_decoder.h  h264bsd_dpb.c  h264bsd_dpb.h  h264bsd_image.h  h264bsd_inter_prediction.c  h264bsd_intra_prediction.h  h264bsd_macroblock_layer.h  h264bsd_nal_unit.c  h264bsd_pic_order_cnt.c  h264bsd_sei.h  h264bsd_slice_group_map.c  h264bsd_slice_group_map.h  h264bsd_slice_header.h  h264bsd_stream.h  h264bsd_vlc.h  h264bsd_vui.h
lib/codec/src/helper/: CMakeLists.txt  sdl.cpp  sdl.h
lib/codec/src/stream/: CMakeLists.txt  buffer.cpp  buffer.h
lib/codec/test/: CMakeLists.txt  audio_tag_test.h  body_test.h  data_tag_test.h  decoder.h  decoder_test.h  header_test.h  tag_test.h  test.cpp  vars_test.h  vassert.h  video_tag_test.h
lib/codec/tool/: compile.js  wrapper.js
lib/flv2h264/: README.md  index.js  package-lock.json  package.json  webpack.config.js
lib/flv2h264/test/: index.js
lib/howler.js/: package-lock.json  package.json
lib/tinyH264/: .gitignore  README.md  build.js  build.sh  package-lock.json  package.json
lib/tinyH264/combine/: README.md  TinyH264.asm.js  TinyH264.wasm.js  TinyH264Decoder.js  TinyH264Worker.js
lib/tinyH264/src/: h264bsd_byte_stream.c  h264bsd_conceal.h  h264bsd_reconstruct.h  h264bsd_storage.c  h264bsd_transform.c  h264bsd_util.h  h264bsd_vlc.c
src/: index.js
src/drawer/: drawer.js
src/loader/: chunk.js  loader.js  stream.js
src/player/: drawer.js  player.js
src/processor/: processor.js
src/sound/: browser.js  hwaudio.js  sound.js  wechat.js  wxaudio.js
src/util/: loader.js  ticker.js  util.js
